--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -174,6 +174,8 @@ source "drivers/ipack/Kconfig"
 
 source "drivers/reset/Kconfig"
 
+source "drivers/android/Kconfig"
+
 source "drivers/coresight/Kconfig"
 
 source "drivers/bif/Kconfig"
